@@ -30,7 +30,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Class-Utils
-  homepage: https://github.com/tupinek/Class-Utils
+  homepage: https://github.com/michal-josef-spacek/Class-Utils
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Class-Utils
+  repository: git://github.com/michal-josef-spacek/Class-Utils
 version: '0.09'
