@@ -25,8 +25,8 @@ requires 'Readonly' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Class-Utils';
-resources 'homepage' => 'https://github.com/tupinek/Class-Utils';
-resources 'repository' => 'git://github.com/tupinek/Class-Utils';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Class-Utils';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Class-Utils';
 test_requires 'English' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
